@@ -16,6 +16,9 @@
 						<a href="#sirius7.5.0">Changes in Sirius  Desktop 7.5.0</a>
 						<ol style="list-style: disc;">
 							<li>
+								<a href="#UserVisibleChanges">User-Visible Changes</a>
+							</li>
+							<li>
 								<a href="#SpecifiersVisibleChanges">Specifiers-Visible Changes</a>
 							</li>
 						</ol>
@@ -60,7 +63,7 @@
 						<a href="#sirius7.4.5">Changes in Sirius  Desktop 7.4.5</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges">User-Visible Changes</a>
+								<a href="#UserVisibleChanges2">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#DeveloperVisibleChanges2">Developer-Visible Changes</a>
@@ -79,7 +82,7 @@
 						<a href="#sirius7.4.3">Changes in Sirius  Desktop 7.4.3</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges2">User-Visible Changes</a>
+								<a href="#UserVisibleChanges3">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges">Specifier-Visible Changes</a>
@@ -93,7 +96,7 @@
 						<a href="#sirius7.4.2">Changes in Sirius Desktop 7.4.2</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges3">User-Visible Changes</a>
+								<a href="#UserVisibleChanges4">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges2">Specifier-Visible Changes</a>
@@ -107,7 +110,7 @@
 						<a href="#sirius7.4.1">Changes in Sirius  Desktop 7.4.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges4">User-Visible Changes</a>
+								<a href="#UserVisibleChanges5">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges3">Specifier-Visible Changes</a>
@@ -121,7 +124,7 @@
 						<a href="#sirius7.4.0">Changes in Sirius  Desktop 7.4.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges5">User-Visible Changes</a>
+								<a href="#UserVisibleChanges6">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges4">Specifier-Visible Changes</a>
@@ -135,7 +138,7 @@
 						<a href="#sirius7.3.0">Changes in Sirius 7.3.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges6">User-Visible Changes</a>
+								<a href="#UserVisibleChanges7">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges5">Specifier-Visible Changes</a>
@@ -149,7 +152,7 @@
 						<a href="#sirius7.2.1">Changes in Sirius 7.2.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges7">User-Visible Changes</a>
+								<a href="#UserVisibleChanges8">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges6">Specifier-Visible Changes</a>
@@ -163,7 +166,7 @@
 						<a href="#sirius7.2.0">Changes in Sirius 7.2.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges8">User-Visible Changes</a>
+								<a href="#UserVisibleChanges9">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges7">Specifier-Visible Changes</a>
@@ -177,7 +180,7 @@
 						<a href="#sirius7.1.0">Changes in Sirius 7.1.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges9">User-Visible Changes</a>
+								<a href="#UserVisibleChanges10">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges8">Specifier-Visible Changes</a>
@@ -191,7 +194,7 @@
 						<a href="#sirius7.0.4">Changes in Sirius 7.0.4</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges10">User-Visible Changes</a>
+								<a href="#UserVisibleChanges11">User-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -226,7 +229,7 @@
 						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges11">User-Visible Changes</a>
+								<a href="#UserVisibleChanges12">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#DeveloperVisibleChanges15">Developer-Visible Changes</a>
@@ -237,7 +240,7 @@
 						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges12">User-Visible Changes</a>
+								<a href="#UserVisibleChanges13">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#DeveloperVisibleChanges16">Developer-Visible Changes</a>
@@ -256,7 +259,7 @@
 						<a href="#sirius6.5.0">Changes in Sirius 6.5.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges13">User-Visible Changes</a>
+								<a href="#UserVisibleChanges14">User-Visible Changes</a>
 							</li>
 							<li>
 								<a href="#SpecifierVisibleChanges10">Specifier-Visible Changes</a>
@@ -277,6 +280,14 @@
 			<li><span class="label label-info">Modified</span> As of version 7.5.0, Sirius Desktop now requires Eclipse 2025-09 or later (and the corresponding versions of EMF, GEF, GMF, EEF, Acceleo).</li>
 			<li><span class="label label-danger">Removed</span> 
 				<code>org.eclipse.sirius.eef.adapters</code> plugin and EEF 1.5 support have been removed.
+			</li>
+		</ul>
+		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-info">Modified</span> Edition using the Grid has been improved. 
+				<ul>
+					<li>When creating a node with &#8220;Snap to Grid&#8221; enabled, its size is adjusted to the grid spacing so that its resizable sides align with the grid. This ensures that the node’s corners match the grid intersections. Currently, this only applies when the node mapping provides size hints to define a preferred size.</li>
+				</ul>
 			</li>
 		</ul>
 		<h3 id="SpecifiersVisibleChanges">Specifiers-Visible Changes</h3>
@@ -335,7 +346,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.4.5">Changes in Sirius  Desktop 7.4.5</h2>
-		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> In the 
 				<code>ImageSelectionDialog</code>, a new feature has been added to reset the WorkspaceImage assigned to a DDiagramElement. Before this improvement, it was necessary to use the “Reset style properties to default values” button, but this also affected all other style modifications. This new button in the dialog resets only the WorkspaceImage style to the style of the element as defined in the Viewpoint Specification Model.
@@ -407,7 +418,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.4.3">Changes in Sirius  Desktop 7.4.3</h2>
-		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The pin behavior has been changed for edges.
 				<ul>
@@ -485,7 +496,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.4.2">Changes in Sirius Desktop 7.4.2</h2>
-		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> A 
 				<a href="https://github.com/eclipse-sirius/sirius-desktop/issues/419">regression</a> introduced in 7.4.1 which prevented the dirty state marker (*) to be displayed in the model explorer in some cases has been fixed. 
@@ -495,7 +506,7 @@
 		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
 		<h4 id="Migrations2">Migrations</h4>
 		<h2 id="sirius7.4.1">Changes in Sirius  Desktop 7.4.1</h2>
-		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The UI preference 
 				<code>SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE</code> has been renamed from &#8220;Display viewpoints colors&#8221; to &#8220;Display suggested colors in color palette&#8221;. 
@@ -519,7 +530,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.4.0">Changes in Sirius  Desktop 7.4.0</h2>
-		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Copy and paste style from one diagram element to another. The copied and pasted diagram elements may be of different types. The style properties are applied at best. You can refer to the 
 				<a href="user/diagrams/Diagrams.html#paste_style">paste style documentation</a> for more details.
@@ -699,7 +710,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.3.0">Changes in Sirius 7.3.0</h2>
-		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges7">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> A new preference has been added in the Sirius Diagram preference page. This preference allows the user to choose the arrangement of elements created on a diagram when they are not directly positioned by the user. In the preference page, users can choose between a diagonal, vertical or horizontal arrangement.</li>
 		</ul>
@@ -731,7 +742,7 @@
     diagramPreferences.putBoolean(SiriusDiagramUiPreferencesKeys.@PREF_NEWLY_CREATED_ELEMENTS_LAYOUT@, 2);
 </code></pre>
 		<h2 id="sirius7.2.1">Changes in Sirius 7.2.1</h2>
-		<h3 id="UserVisibleChanges7">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges8">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Sequence diagrams are now correctly identified in the Sirius Session Details report (accessible with the &#8220;Properties&#8221; dialog on an aird file).</li>
 			<li><span class="label label-info">Modified</span> When a semantic modification is made on a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as much as possible.</li>
@@ -787,7 +798,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.2.0">Changes in Sirius 7.2.0</h2>
-		<h3 id="UserVisibleChanges8">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges9">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 (or later) is now required to run Sirius.</li>
 		</ul>
@@ -807,7 +818,7 @@
 			<li><span class="label label-info">Modified</span> Java 17 is required as BREE and source level.</li>
 		</ul>
 		<h2 id="sirius7.1.0">Changes in Sirius 7.1.0</h2>
-		<h3 id="UserVisibleChanges9">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges10">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> In a tree editor, if the 
 				<code>Shift</code> key is pressed during using the 
@@ -956,7 +967,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.4">Changes in Sirius 7.0.4</h2>
-		<h3 id="UserVisibleChanges10">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges11">User-Visible Changes</h3>
 		<p>Minor release to avoid errors thrown during indirect deletion of edges whose label is selected (deletion done from outside the diagram editor or from a custom command).</p>
 		<h2 id="sirius7.0.3">Changes in Sirius 7.0.3</h2>
 		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
@@ -1010,7 +1021,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.0">Changes in Sirius 7.0.0</h2>
-		<h3 id="UserVisibleChanges11">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges12">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Some enhancement have been done about the images management.
 				<ul>
@@ -1354,7 +1365,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.6.0">Changes in Sirius 6.6.0</h2>
-		<h3 id="UserVisibleChanges12">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges13">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> 4 new actions have been added to control the &#8220;z-order&#8221; of edges. These actions are mainly useful in the context of 
 				<a href="user/diagrams/Diagrams.html#Appearance">jump links</a>. Similar actions already existed for nodes but not for edges. A chapter dedicated to these new actions has been added in 
@@ -1429,7 +1440,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.0">Changes in Sirius 6.5.0</h2>
-		<h3 id="UserVisibleChanges13">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges14">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is possible to override at the aird level both &#8220;Sirius/Do Refresh on representation opening&#8221; and &#8220;Sirius/Automatic refresh&#8221; preferences. To override the preferences, right-click on the 
 				<code>aird</code> file, select &#8220;Properties&#8221;, and in the dialog go to the &#8220;Sirius settings&#8221; section. The preferences are stored in the project scope and associated to the aird file. For more details, refer the 
